--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <main id="grid" class="grid" aria-live="polite"></main>
   <footer class="footer">
-    <p>Photos may be sourced from translivesmatter.info and public memorial assets. Please use respectfully.</p>
+    <p>Collage imagery and data are sourced from the TDoR API at <a href="https://tdor.translivesmatter.info" target="_blank" rel="noopener">translivesmatter.info</a>.</p>
   </footer>
   <script src="app.js" defer></script>
 </body>
