feat: replace static header image with autoplay video
- Added looping candle vigil video as hero element
- Updated header styling to accommodate full-width video with responsive sizing
- Simplified background gradient to solid black

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-    <img src="TDOR_flyer.png" alt="Transgender Day of Remembrance flyer" class="flyer" />
+    <video class="hero-video" src="assets/vigil-candles.mp4" poster="TDOR_flyer.png" autoplay muted loop playsinline></video>
   </header>
   <main class="loop" id="loop" aria-label="Photo collage auto-scroll region">
     <div id="track">
