--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   </main>
   <footer class="footer">
-    <p>Collage imagery and data are sourced from the TDoR API at <a href="https://tdor.translivesmatter.info" target="_blank" rel="noopener">translivesmatter.info</a>.</p>
+    <p>Collage imagery and data are sourced from <a href="https://tdor.translivesmatter.info" target="_blank" rel="noopener">translivesmatter.info</a>.</p>
   </footer>
   <script src="app.js" defer></script>
 </body>
