feat: add sound toggle button with localStorage preference persistence
- Added fixed sound toggle button in top right corner
- Implemented localStorage to remember user's preference across sessions
- Changed default behavior: sound starts muted for first-time visitors
- Added UI states for toggle button: Off, Starting…, On, and "Tap to start sound" (when blocked)
- Refactored audio playback logic to respect user preference and handle autoplay blocking

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <header class="header">
     <video class="hero-video" src="assets/vigil-candles.mp4" poster="TDOR_flyer.png" autoplay muted loop playsinline></video>
   </header>
-  <audio id="bg-audio" src="tragic-music.mp3" loop autoplay style="display:none"></audio>
+  <button class="sound-toggle" id="sound-toggle" type="button" aria-pressed="false">Sound: Off</button>
+  <audio id="bg-audio" src="tragic-music.mp3" loop style="display:none"></audio>
   <main class="loop" id="loop" aria-label="Photo collage auto-scroll region">
     <div id="track">
       <div class="grid" id="grid" aria-live="polite"></div>
